gcc/testsuite/rust/rustc/ui/pub/pub-ident-fn-or-struct-2.rs
pub S();
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

